# Rust-NLP-web-app

./: requirements.txt
frontend_py/: front.py
functions/: api.py  key_world_cloud.py  ner.py  sentiment.py  summarization.py  tag_prediction.py
parser/: Cargo.toml
parser/src/: parser.rs
simple_api/: Cargo.toml
simple_api/src/: main.rs
