[package]
name = "simple_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
select = "0.5"
url = "2.2"
tokio = { version = "1", features = ["full"] }
scraper = "0.12"